JS name bugfixes + make ttpub standalone
When stop IDs or trip IDs contain invalid characters (e.g. : - ), the web UI does not behave correctly. This was corrected at least for these characters.

--- a/src/templates/timetable.config
+++ b/src/templates/timetable.config
@@ -84,7 +84,7 @@
       [#assign seq = cl.getSequence()?default( 1111 )]
       [#assign attribs = ""]
       [#assign title   = ""]
-      [#assign id      = "NAME_${cl.getStopId()}"]
+      [#assign id      = "NAME_${funct.getProperElementName(cl.getStopId())}"]
       [#if seq == Parameters.PHANTOM_SEQ]
          [#assign attribs = "id=\"PHANTOM\""]
          [#assign title = "NOTE: this is PHANTOM stop...times are interpolated from other stop times."]
@@ -93,7 +93,7 @@
         [#assign attribs = "id=\"${id}\""]
         [#assign title = "NOTE: to change the name of this stop, use the RenameTimepoint configuration."]
       [#else]
-        [#assign attribs = "id=\"${id}\" onDblclick=\"NAME_${cl.getStopId()}.putInput()\""]
+        [#assign attribs = "id=\"${id}\" onDblclick=\"NAME_${funct.getProperElementName(cl.getStopId())}.putInput()\""]
       [/#if]
       [@stopHeaderElement content=cl.getDescription()?default("ERROR")?html stop=cl title=title otherAttributes=attribs/]
     [/#list]
@@ -113,7 +113,7 @@
         [#assign attribs = "id=\"PHANTOM\""]
         [#assign content = "PHANTOM"]      
       [#else]
-        [#assign attribs = "id=\"SEQ_${cl.getStopId()}\" onDblclick=\"SEQ_${cl.getStopId()}.putInput()\""]
+        [#assign attribs = "id=\"SEQ_${funct.getProperElementName(cl.getStopId())}\" onDblclick=\"SEQ_${funct.getProperElementName(cl.getStopId())}.putInput()\""]
         [#assign content = "${seq}"]      
       [/#if]
       [@stopHeaderElement content=content stop=cl otherAttributes=attribs/]
@@ -210,9 +210,9 @@ FootNotes:
     [#assign seq = cl.getSequence()?default( 1111 )]
     [#if seq != Parameters.PHANTOM_SEQ]
     var NAME_${funct.getProperElementName(cl.getStopId())} = 
-      new Forms('NAME_${cl.getStopId()}', '${Parameters.STOP_NAME_}${cl.getStopId()}', '${cl.getDescription()?default("")?js_string}', '15', ttForms);
+      new Forms('NAME_${funct.getProperElementName(cl.getStopId())}', '${Parameters.STOP_NAME_}${cl.getStopId()}', '${cl.getDescription()?default("")?js_string}', '15', ttForms);
     var SEQ_${funct.getProperElementName(cl.getStopId())}  = 
-      new Forms('SEQ_${cl.getStopId()}',  '${Parameters.STOP_SEQ_}${cl.getStopId()}',  '${seq}', '3',  ttForms);
+      new Forms('SEQ_${funct.getProperElementName(cl.getStopId())}',  '${Parameters.STOP_SEQ_}${cl.getStopId()}',  '${seq}', '3',  ttForms);
     [/#if]
   [/#list]
 </SCRIPT>
