--- a/config/TimeTableProperties.properties
+++ b/config/TimeTableProperties.properties
@@ -1,10 +1,10 @@
 DEFAULT_AGENCY       = Amtrak Cascades
 DEFAULT_ROUTE        = 1
 DEFAULT_TABLE_TYPE   = GTFS
-CONFIGURE_DIRECTORY  = WEB-INF/classes/org/gtfs/configure/
-SCHEDULE_DIRECTORY   = WEB-INF/classes/org/gtfs/schedule/
-SCHEDULE_DIRECTORY  = ../../gtfs/
-CONFIGURE_DIRECTORY = ../../configure/
+#CONFIGURE_DIRECTORY  = WEB-INF/classes/org/gtfs/configure/
+#SCHEDULE_DIRECTORY   = WEB-INF/classes/org/gtfs/schedule/
+SCHEDULE_DIRECTORY   = gtfs/
+CONFIGURE_DIRECTORY  = configure/
 MAX_TIMEPOINTS       = 100
 TEMPLATES_DIR        = templates
 HTML_TEMPLATES_DIR   = gtfs
